started path